--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         name="author" content="Lizzie">
     <link
         rel="icon" type="image/png" href="imgs/favicon.png">
-
     <script
         src="https://kit.fontawesome.com/b6945f2f16.js"
         crossorigin="anonymous">
@@ -35,6 +34,32 @@
 
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <!-- <img class="fab" href="imgs/favicon.png"> -->
+            <img src="imgs/favicon.png" alt="logo">
+            <a href=" ">Lizzie</a>
+        </div>
+        <div class="navbar__menu"></div>
+            <ul class="navbar__menu">
+                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My work</li>
+                <li class="navbar__menu__item">Testimonial</li>
+                <li class="navbar__menu__item">Contact</li>
+            </ul>
+    </nav>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimonials -->
+    <section id="testimonials"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
