--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta
         name="author" content="Lizzie">
     <link
-        rel="icon" type="image/png" href="imgs/favicon.png">
+        rel="icon" type="image/png" href="imgs/icon.png">
     <script
         src="https://kit.fontawesome.com/b6945f2f16.js"
         crossorigin="anonymous">
@@ -38,7 +38,7 @@
     <nav id="navbar">
         <div class="navbar__logo">
             <!-- <img class="fab" href="imgs/favicon.png"> -->
-            <img src="imgs/favicon.png" alt="logo">
+            <img src="imgs/icon.png" alt="logo" />
             <a href=" ">Lizzie</a>
         </div>
         <div class="navbar__menu"></div>
@@ -51,10 +51,128 @@
                 <li class="navbar__menu__item">Contact</li>
             </ul>
     </nav>
+
+    <!-- Home -->
+    <section id="home">
+        <img
+        src="imgs/profile.png"
+        alt="Lizzie's Profile photo"
+        class="home__avatar" />
+        <h1 class="home__title">Hello,<br /> I'm Lizzie</h1>
+        <h2 class="home__description">fun-seeking Programmer </h2>
+        <button class="home__contact">Contact ME</button>
+    </section>
+
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About Me</h1>
+        <p>I can do it !</p>
+        <div class="about__majors">
+            <!-- html -->
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-solid fa-file-code"></i>
+                </div>
+                <div class="major__title">
+                    html
+                </div>
+                <div class="major__description">
+                    I can do html !
+                </div>
+            <!-- css -->
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-css3-alt"></i>
+                </div>
+                <div class="major__title">
+                    css
+                </div>
+                <div class="major__description">
+                    I can do css !
+                </div>
+            <!-- java script -->
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-js-square"></i>
+                </div>
+                <div class="major__title">
+                    js
+                </div>
+                <div class="major__description">
+                    I can do js !
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <div class="about__jobs">
+        <div class="job">
+            <img src="" alt="" class="job__logo">
+            <p class="job__name"></p>
+            <p class="jop__period"></p>
+        </div>
+    </div> -->
+
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attribute</h2>
+        <p>my skills !</p>
+
+        <div class="skillset">
+            <!-- skillset__left -->
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <!-- HTML -->
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>10%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <!-- CSS -->
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>CSS</span>
+                        <span>3%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <!-- JAVA SCRIPT -->
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>JAVA SCRIPT</span>
+                        <span>0%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- skillset__right -->
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">Etc</h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
