--- a/index.html
+++ b/index.html
@@ -192,7 +192,10 @@
              href=""
              class="project"
              target="blank">
-            <img src="imgs/projects/project3.png" alt="funny">
+            <img
+             class="project__img"
+             src="imgs/projects/project3.png"
+            alt="funny">
             <div class="projiect__description">
                 <h3>funny</h3>
                 <span>Clone coding sang-co HTML and CSS</span>
@@ -202,9 +205,32 @@
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+            <div class="tetsimonial">
+                <img src="imgs/testimonial img.png"
+                 alt="someone"
+                  class="testimonial__avatar" />
+                  <div class="testimonial__speech-bubble">
+                    <p>똑똑하고 귀엽고 행복한 사람입니다 !</p>
+                    <p class="name"><a href="">jihye</a> / company</p>
+                  </div>
+            </div>
+
+        </div>
+    </section>
     
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">leejihye7117@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/2wisdom" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
